--- a/requirements2.txt
+++ b/requirements2.txt
@@ -23,5 +23,5 @@ jmespath==0.9.4
 botocore==1.12.189
 s3transfer==0.2.1
 docutils==0.14
-python-dateutil=2.5.3
+python-dateutil==2.5.3
 futures==3.2.0
